# slot-faker

./: pyproject.toml
slot_faker/: __init__.py  config.py  domain.py
slot_faker/providers/: __init__.py
slot_faker/providers/account_number/: __init__.py
slot_faker/providers/cable_providers/: __init__.py
slot_faker/providers/customer_profile/: __init__.py
slot_faker/providers/customer_service/: __init__.py
slot_faker/providers/date/: __init__.py
slot_faker/providers/drivers_license/: __init__.py  repermute.py
slot_faker/providers/duration/: __init__.py
slot_faker/providers/finance/: __init__.py
slot_faker/providers/number/: __init__.py
slot_faker/providers/percentage/: __init__.py
slot_faker/providers/phone/: __init__.py
slot_faker/providers/pop_culture/: __init__.py
slot_faker/providers/postal_address/: __init__.py  zip_codes.json
slot_faker/providers/speed/: __init__.py
slot_faker/providers/subscription/: __init__.py
slot_faker/providers/technology/: __init__.py
slot_faker/providers/time/: __init__.py
slot_faker/providers/utterances/: __init__.py
slot_faker/providers/weight/: __init__.py
slot_faker/providers/wifi/: __init__.py
tests/: test_slot_faker.py
