[tool.poetry]
name = "slot-faker"
version = "0.1.0"
description = "Generates fake data"
authors = ["welocalize <aie-devel@welocalize.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^5.1.0"
StringGenerator = "^0.3.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
