[tool.poetry]
name = "slot-faker"
version = "0.1.3"
description = "Generates fake data"
authors = ["welocalize <aie-devel@welocalize.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^5.1.0"
StringGenerator = "^0.3.4"
lxml = "^4.6.2"
html5lib = "^1.1"
bs4 = "^0.0.1"
inflect = "^5.0.2"
faker-wifi-essid = "^0.2.0"
dateparser = "^1.0.0"
arrow = "^0.17.0"
timefhuman = "^0.0.5"
sutime = "^1.0.1"
JPype1 = "^1.2.1"
setuptools-scm = "^5.0.1"
humanize = "^3.2.0"
wolframalpha = "^4.1.1"
pytrends = "^4.7.3"
num2words = "^0.5.10"
numpy = "^1.19.5"
pandas = "^1.2.0"
xlrd = "^2.0.1"
openpyxl = "^3.0.6"
utterer = "^0.1.1"
"ruamel.yaml" = "^0.16.12"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"

[[tool.poetry.source]]
name = "rypy"
url = "https://pypi.rypy.tk/simple/"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
